--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/cjs.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel src -d dist --copy-files",
-    "lint": "eslint src --fix"
+    "lint": "eslint src",
+    "fix": "eslint src --fix"
   },
   "keywords": [
     "webpack"
